fix: fix info admonition header color with poor legibility

--- a/src/theme/Admonition/styles.module.scss
+++ b/src/theme/Admonition/styles.module.scss
@@ -65,6 +65,11 @@
   flex: 1;
 }
 
+// Make info header text brighter for better legibility
+.admonitionHeader[data-type="info"] .admonitionTitle {
+  color: #49EDED;
+}
+
 .admonitionContent {
   padding: 16px 20px 20px 20px;
   position: relative;
